fix: fix header z-index

--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -11,7 +11,7 @@
         position: sticky;
         width: 100vw;
         top: 0;
-        z-index: 100;
+        z-index: 40;
     }
 }
 
